Job control service defined
