# server/src/main/resources/openapi/meta-storage-1.0.yaml
@@ -594,6 +594,79 @@ paths:
           $ref: "#/components/responses/trait_404"
         "500":
           $ref: "#/components/responses/trait_500"
+  /meta-storage/pmh-clients/{id}/start:
+    parameters:
+      - $ref: headers/okapi-tenant.yaml
+      - $ref: headers/okapi-token.yaml
+      - $ref: headers/okapi-url.yaml
+      - in: path
+        name: id
+        required: true
+        description: OAI-PMH client identifier
+        schema:
+          type: string
+    post:
+      description: Start OAI PMH client job
+      operationId: startOaiPmhClient
+      responses:
+        "204":
+          description: started ok
+        "400":
+          $ref: "#/components/responses/trait_400"
+        "404":
+          $ref: "#/components/responses/trait_404"
+        "500":
+          $ref: "#/components/responses/trait_500"
+  /meta-storage/pmh-clients/{id}/stop:
+    parameters:
+      - $ref: headers/okapi-tenant.yaml
+      - $ref: headers/okapi-token.yaml
+      - $ref: headers/okapi-url.yaml
+      - in: path
+        name: id
+        required: true
+        description: OAI-PMH client identifier
+        schema:
+          type: string
+    post:
+      description: Stop OAI PMH client job
+      operationId: stopOaiPmhClient
+      responses:
+        "204":
+          description: stopped ok
+        "400":
+          $ref: "#/components/responses/trait_400"
+        "404":
+          $ref: "#/components/responses/trait_404"
+        "500":
+          $ref: "#/components/responses/trait_500"
+  /meta-storage/pmh-clients/{id}/status:
+    parameters:
+      - $ref: headers/okapi-tenant.yaml
+      - $ref: headers/okapi-token.yaml
+      - $ref: headers/okapi-url.yaml
+      - in: path
+        name: id
+        required: true
+        description: OAI-PMH client identifier
+        schema:
+          type: string
+    get:
+      description: Get OAI PMH client status
+      operationId: statusOaiPmhClient
+      responses:
+        "200":
+          description: status
+          content:
+            application/json:
+              schema:
+                $ref: schemas/oai-pmh-client-status.json
+        "400":
+          $ref: "#/components/responses/trait_400"
+        "404":
+          $ref: "#/components/responses/trait_404"
+        "500":
+          $ref: "#/components/responses/trait_500"
 # Meta storage error responses
 components:
   responses:
